Cleaned up some code, moved hero into main content area, adjusted some spacing on small screens, added alt text to project images, fixed some accessibility issues

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -777,8 +777,8 @@ a.button, button, input[type=submit], input[type=button] {
 
 	.project {
 		display: block;
-		padding-left: 1.5em;
-		padding-right: 1.5em;
+		padding-left: 0;
+		padding-right: 0;
 
 		.info {
 			margin-top: 1.5em;
